--- a/package.json
+++ b/package.json
@@ -19,12 +19,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-<<<<<<< HEAD
     "nodemon": "^2.0.7",
-    "tf_node_tokenizer": "^1.0.3"
-=======
-    "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.7"
->>>>>>> 3a995851adf0e02c1eb4d7365eeb399ff3617ba8
+    "tf_node_tokenizer": "^1.0.3",
+    "node-fetch": "^2.6.1"
   }
 }
